hard align fixed menu

--- a/static_source/sass/style.scss
+++ b/static_source/sass/style.scss
@@ -187,6 +187,7 @@ a, a:hover, a:visited {
     .menu {
       position: fixed;
       left: 50%;
+      top: 0;
       margin: 0 !important;
       padding-top: 0.5em;
       width: 50%;
